--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "author": "Red Hat Training",
   "license": "ASL",
+  "scripts": " { "start" : "node server.js"},
   "dependencies": {
     "express": "4.x",
     "html-errors": "latest"
